Renaming ProximityEvent to RadioObservation (#17)
